crates/solidity/testing/snapshots/bindings_output/variables/incomplete_type_name/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier.
    ╭─[input.sol:11:1]
    │
 11 │ }
    │ │ 
    │ ╰─ Error occurred here.
────╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     struct Data {
    │            ──┬─  
    │              ╰─── name: 2
  3 │         uint120 field;
    │                 ──┬──  
    │                   ╰──── name: 3
    │ 
  7 │     Test.Data public data;
    │     ──┬─ ──┬─        ──┬─  
    │       ╰──────────────────── ref: 1
    │            │           │   
    │            ╰─────────────── ref: 2
    │                        │   
    │                        ╰─── name: 4
    │ 
 10 │     Test.
    │     ──┬─  
    │       ╰─── unresolved
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─│ ──▶ contract Test {
  2 │ │ ╭───▶     struct Data {
  3 │ │ │             uint120 field;
    │ │ │     ───────────┬───────────  
    │ │ │                ╰───────────── definiens: 3
  4 │ │ ├─│ ▶     }
    │ │ │ │           
    │ │ ╰───────────── definiens: 2
  5 │ │   ╭─▶ 
    ┆ ┆   ┆   
  7 │ │   ├─▶     Test.Data public data;
    │ │   │                                
    │ │   ╰──────────────────────────────── definiens: 4
    ┆ ┆       
 11 │ ├─────▶ }
    │ │           
    │ ╰─────────── definiens: 1
────╯
